--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "mapbox-gl": "^1.12.0",
     "query-string": "^5.1.1",
     "react": "^17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.3",
     "react-final-form-listeners": "^1.0.3",
