--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dev-m": "gatsby develop -H 0.0.0.0",
     "develop": "gatsby develop",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-watch": "jest --watch",
     "build": "cross-env gatsby build",
     "build-dev-backend": "cross-env GATSBY_USE_DEV_BACKEND=override gatsby build",
     "start": "npm run develop",
@@ -37,6 +38,7 @@
     "@loadable/component": "^5.15.0",
     "@loadable/server": "^5.15.0",
     "@popperjs/core": "^2.9.2",
+    "@reach/router": "^1.3.4",
     "@turf/along": "^6.2.0",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
@@ -97,6 +99,8 @@
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.0.6",
+    "babel-preset-gatsby": "^1.9.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.23.0",
     "eslint-config-react-app": "^6.0.0",
@@ -105,6 +109,9 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^1.19.1"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.6",
+    "prettier": "^1.19.1",
+    "react-test-renderer": "^17.0.2"
   }
 }
