--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@loadable/component": "^5.15.0",
     "@loadable/server": "^5.15.0",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.2",
     "@popperjs/core": "^2.9.2",
     "@reach/router": "^1.3.4",
     "@turf/along": "^6.2.0",
