--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,4 @@ command = "npm run build-dev-backend"
 [context.deploy-preview.environment]
 CONTENTFUL_ENVIRONMENT = "2021-08-25"
 GATSBY_USE_DEV_BACKEND = "override"
+GATSBY_PROJECT = "Berlin"
