--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "gatsby-plugin-less": "^5.14.0",
     "gatsby-plugin-matomo": "^0.10.0",
     "gatsby-plugin-netlify": "^3.14.0",
-    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-react-helmet-async": "^1.2.0",
     "gatsby-plugin-sharp": "^3.14.1",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.25",
@@ -96,6 +95,7 @@
   "devDependencies": {
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/webpack-plugin": "^5.15.1",
+    "@netlify/plugin-gatsby": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-eslint": "^10.1.0",
