--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          node-version: 14.x
+
       - name: Install modules
         run: npm install
+
       - name: Run tests
         run: npm run test
+
+      - name: Check formating
+        run: npm run prettier:check
