--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,6 @@ jobs:
 
       - name: Check formating
         run: npm run prettier:check
+
+      - name: Check linting
+        run: npm run lint
