--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "@aws-amplify/auth": "^4.3.10",
     "@contentful/rich-text-react-renderer": "^15.4.0",
     "@loadable/component": "^5.15.0",
-    "@mapbox/mapbox-gl-geocoder": "^4.7.2",
     "@loadable/server": "^5.15.1",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.2",
     "@popperjs/core": "^2.10.2",
     "@reach/router": "^1.3.4",
     "@turf/along": "^6.5.0",
@@ -98,7 +98,8 @@
     "react-share": "^4.3.1",
     "react-simple-snackbar": "^1.1.10",
     "svg-inline-loader": "^0.8.2",
-    "trackjs": "^3.10.1"
+    "trackjs": "^3.10.1",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@loadable/babel-plugin": "^5.13.2",
