--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "test:watch": "jest --watch",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "clean:start": "npm run clean && npm i && npm start"
+    "clean:start": "npm run clean && npm i && npm start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@aws-amplify/auth": "^4.3.10",
@@ -102,11 +104,17 @@
     "worker-loader": "^3.0.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/webpack-plugin": "^5.15.1",
     "@netlify/plugin-gatsby": "^1.0.3",
+    "@storybook/addon-actions": "^6.4.8",
+    "@storybook/addon-essentials": "^6.4.8",
+    "@storybook/addon-links": "^6.4.8",
+    "@storybook/react": "^6.4.8",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.2.5",
+    "babel-loader": "^8.2.3",
     "babel-preset-gatsby": "^1.14.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.0.0",
@@ -116,9 +124,11 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-storybook": "^0.5.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.4.1",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "storybook-addon-gatsby": "^0.0.3"
   }
 }
