--- a/netlify.toml
+++ b/netlify.toml
@@ -17,3 +17,8 @@ command = "npm run build-dev-backend"
 [context.deploy-preview.environment]
 CONTENTFUL_ENVIRONMENT = "2021-08-25"
 GATSBY_USE_DEV_BACKEND = "override"
+
+[[headers]]
+  for = "/iframes/*"
+  [headers.values]
+    X-Frame-Options = "ALLOWALL"
