--- a/.babelrc
+++ b/.babelrc
@@ -22,6 +22,7 @@
     ]
   ],
   "plugins": [
+    "@loadable/babel-plugin",
     [
       "@babel/plugin-proposal-class-properties",
       {
@@ -36,7 +37,6 @@
         "helpers": true,
         "regenerator": true
       }
-    ],
-    "@loadable/babel-plugin"
+    ]
   ]
 }
