--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@aws-amplify/auth": "^4.3.10",
+    "@circles-pink/web-client": "^1.0.22",
     "@contentful/rich-text-react-renderer": "^15.4.0",
     "@loadable/component": "^5.15.0",
     "@loadable/server": "^5.15.1",
@@ -69,6 +70,7 @@
     "gatsby-plugin-less": "^5.14.0",
     "gatsby-plugin-matomo": "^0.10.0",
     "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-polyfill-io": "^1.1.0",
     "gatsby-plugin-react-helmet-async": "^1.2.0",
     "gatsby-plugin-sharp": "^3.14.1",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.25",
@@ -106,9 +108,12 @@
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/webpack-plugin": "^5.15.1",
     "@netlify/plugin-gatsby": "^1.0.3",
+    "assert": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.2.5",
     "babel-preset-gatsby": "^1.14.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.0.0",
     "eslint-config-react-app": "^6.0.0",
@@ -117,9 +122,14 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "https-browserify": "^1.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.5",
+    "os-browserify": "^0.3.0",
     "prettier": "^2.4.1",
-    "react-test-renderer": "^17.0.2"
+    "process": "^0.11.10",
+    "react-test-renderer": "^17.0.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0"
   }
 }
